--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "@mui/x-data-grid": "^8.24.0",
+    "@mui/x-date-pickers": "^8.24.0",
     "@tailwindcss/vite": "^4.1.18",
+    "dayjs": "^1.11.19",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
