--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@mui/x-data-grid": "^8.24.0",
     "@mui/x-date-pickers": "^8.24.0",
     "@tailwindcss/vite": "^4.1.18",
+    "axios": "^1.13.2",
     "dayjs": "^1.11.19",
+    "lucide": "^0.562.0",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
