--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "@mui/x-charts": "^8.24.0",
     "@mui/x-data-grid": "^8.24.0",
     "@mui/x-date-pickers": "^8.24.0",
     "@tailwindcss/vite": "^4.1.18",
